# Celadon

./: .coverage  .gitignore  README.md  index.html  pyproject.toml
celadon/: __init__.py  application.py  enums.py  frames.py  palette.py  state_machine.py  style_map.py
celadon/widgets/: __init__.py  button.py  checkbox.py  container.py  dialogue.py  dropdown.py  field.py  link.py  nav.py  progress.py  slider.py  text.py  widget.py
experiments/: app.py  checkbox.py  simple_widget.py
tests/: test_state_machine.py  test_widget.py
